seq2seq with meeting data

--- a/Supervised_Models/Seq2seq-attention/Seq2seq-attention-glove-embeddings-gigaword.ipynb
+++ b/Supervised_Models/Seq2seq-attention/Seq2seq-attention-glove-embeddings-gigaword.ipynb
@@ -159,7 +159,7 @@
    ],
    "source": [
     "# data=pd.read_csv(\"..\\\\Data\\\\model_training\\\\100000_samples_Reviews.csv\")\n",
-    "data=pd.read_csv(\"..\\\\Data\\\\model_training\\\\100000_samples_giga.csv\", nrows=100000)\n",
+    "data=pd.read_csv(\"..\\\\..\\\\Data\\\\model_training\\\\100000_samples_giga.csv\", nrows=100000)\n",
     "data[['Text','Summary']]"
    ]
   },
@@ -620,7 +620,7 @@
     }
    ],
    "source": [
-    "glove_dir='..\\\\Data\\\\word_embeddings'\n",
+    "glove_dir='..\\\\..\\\\Data\\\\word_embeddings'\n",
     "glove_dimension=200\n",
     "embeddings_index = {}\n",
     "with open(os.path.join(glove_dir, 'glove.6B.'+str(glove_dimension)+'d.txt'), encoding=\"utf8\") as f:\n",
