--- a/Supervised_Models/Seq2seq-attention/Seq2seq-attention-no-embeddings.ipynb
+++ b/Supervised_Models/Seq2seq-attention/Seq2seq-attention-no-embeddings.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=pd.read_csv(\"..\\\\Data\\\\model_training\\\\100000_samples_Reviews.csv\")\n",
+    "data=pd.read_csv(\"..\\\\..\\\\Data\\\\model_training\\\\100000_samples_Reviews.csv\")\n",
     "data.drop_duplicates(subset=['Text'],inplace=True)#dropping duplicates\n",
     "data.dropna(axis=0,inplace=True)#dropping na"
    ]
