--- a/Supervised_Models/Seq2seq-attention/Final-Model/Seq2seq-attention-glove-embeddings-AmazonReviews.ipynb
+++ b/Supervised_Models/Seq2seq-attention/Final-Model/Seq2seq-attention-glove-embeddings-AmazonReviews.ipynb
@@ -897,11 +897,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from matplotlib import pyplot \n",
-    "# pyplot.plot(history.history['loss'], label='train') \n",
-    "# pyplot.plot(history.history['val_loss'], label='test') \n",
-    "# pyplot.legend() \n",
-    "# pyplot.show()"
+    "from matplotlib import pyplot \n",
+    "pyplot.plot(history.history['loss'], label='train') \n",
+    "pyplot.plot(history.history['val_loss'], label='test') \n",
+    "pyplot.legend() \n",
+    "pyplot.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_weights('model_amazonreviews.h5')"
    ]
   },
   {
